src/test/ui/unused-crate-deps/deny-attr.stderr
error: external crate `bar` unused in `deny_attr`: remove the dependency or add `use bar as _;`
  --> $DIR/deny-attr.rs:6:1
   |
LL | #![deny(unused_crate_dependencies)]
   | ^
   |
note: the lint level is defined here
  --> $DIR/deny-attr.rs:6:9
   |
LL | #![deny(unused_crate_dependencies)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

